# django-lrucache-backend

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  benchmark.py  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
benchmarking/: benchmark.py  plot.py  requirements.txt  settings.py  utils.py
benchmarking/0.2.0/: performance.md
benchmarking/2.0.0/: performance.md
benchmarking/4.0.0/: performance.md
benchmarking/initial/: initial-performance-objects.md  initial-performance-strings.md
lrucache_backend/: __init__.py  backend.py  backend_pure.py  tests.py
tests/: test_backend.py
