[tool.poetry]
name = "django-lrucache-backend"
version = "2.0.0"
description = "A smarter local memory cache backend for Django"
authors = ["Josh Smeaton <josh.smeaton@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/kogan/django-lrucache-backend"
homepage = "https://github.com/kogan/django-lrucache-backend"
packages = [
    { include = "lrucache_backend" }
]
exclude = ["benchmarking/**/*"]
keywords = ["django", "cache", "lru"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    # "Framework :: Django :: 2.2",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
lru-dict = "^1.1"
Django = "^1.11"

[tool.poetry.dev-dependencies]
tox = "^3.5"
matplotlib = "^3.0"
flake8 = "^3.6"
isort = "^4.3"
black = "^18.3-alpha.0"
