[tool.poetry]
name = "django-lrucache-backend"
version = "3.0.1"
description = "A smarter local memory cache backend for Django"
authors = ["Josh Smeaton <josh.smeaton@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/kogan/django-lrucache-backend"
homepage = "https://github.com/kogan/django-lrucache-backend"
packages = [
    { include = "lrucache_backend" }
]
exclude = ["benchmarking/**/*"]
keywords = ["django", "cache", "lru"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
]

[tool.poetry.dependencies]
python = ">=3.6.4"
lru-dict = "^1.1"
django = ">=2.2"

[tool.poetry.dev-dependencies]
tox = ">=3.5"
matplotlib = ">=3.0"
flake8 = ">=3.6"
isort = ">=4.3"
black = ">=19.10b0"
mypy = "^0.770"
pre-commit = "^2.2.0"
