[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
exclude = docs
max-line-length = 120
ignore =
    P101, # unindexed string.format
    P103, # unindexed format
    W503, # line break before binary operator
    E203, # whitespace before :
    C408, # rewrite dict as literal
    W601, # has_key

[isort]
combine_as_imports = true
default_section = THIRDPARTY
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = django, lru_dict
